[package]
name = "cetkaik_core"
version = "0.1.8"
authors = ["jekto_vatimeliju <jekto.vatimeliju@gmail.com>"]
edition = "2018"
description = "See https://sites.google.com/view/cet2kaik/the-standardized-rule-in-english for context."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
